# 54news_classifier_project

./: CMakeLists.txt  README.md  build.sh  requirements.txt
classifier/: TFIDF.pkl  classifier.py  clf1.pkl  clf3.pkl  clust.ipynb  dict_rev.pkl  ensemble_classifier.py  kor_classification.py  myBoW.py  myClf.py  myCluster.py  myNew.py  myPL_nonPL.py  mySA.py  news2vec.py  rake_algorithm.ipynb  replacer.py  test.py  test2.py  test3.py
data/: README.md.txt
pysrc/: CMakeLists.txt
